Extend swagger for events.
